--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "sanity": "^3.8.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
